subprojects/groovy-parser-antlr4/src/test/resources/fail/ClassDeclaration_01x.groovy
package fail

class A {
    String foo() {}
    def foo() {}
}
new A()